// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CopilotCLI Generate & parse prompts > Folders are attached with just references 1`] = `
"list files in #file:folder
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<attachment id="file:folder" folderPath="/workspace/folder" />
</attachments>
<userRequest>
list files in #file:folder (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > Folders are attached with just references 2`] = `
[
  {
    "displayName": "file:folder",
    "path": "/workspace/folder",
    "type": "directory",
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > Folders are attached with just references 3`] = `
[
  {
    "id": "file:folder",
    "name": "file:folder",
    "range": [
      14,
      25,
    ],
    "value": {
      "$mid": 1,
      "path": "/workspace/folder/",
      "scheme": "file",
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > aggregates multiple errors across same and different files 1`] = `
"Fix these errors
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<error path="/workspace/file.py" line=2 code="E001" severity="warning">
Msg1
</error>
<error path="/workspace/file.py" line=5 code="E002" severity="error">
MsgB
</error>
<error path="/workspace/file.py" line=7 code="E003" severity="info">
MsgC
</error>
<error path="/workspace/file.py" line=2 code="E004" severity="hint">
MsgD
</error>
<error path="/workspace/sample.py" line=21 code="W001" severity="warning">
Msg2
</error>

</attachments>
<userRequest>
Fix these errors (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > aggregates multiple errors across same and different files 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > aggregates multiple errors across same and different files 3`] = `
[
  {
    "id": "file:///workspace/file.py:warning:2:1",
    "name": "Msg1",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/file.py",
            "path": "/workspace/file.py",
            "scheme": "file",
          },
          [
            {
              "code": "E001",
              "message": "Msg1",
              "range": [
                {
                  "character": 0,
                  "line": 1,
                },
                {
                  "character": 0,
                  "line": 1,
                },
              ],
              "severity": "Warning",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
  {
    "id": "file:///workspace/file.py:error:5:1",
    "name": "MsgB",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/file.py",
            "path": "/workspace/file.py",
            "scheme": "file",
          },
          [
            {
              "code": "E002",
              "message": "MsgB",
              "range": [
                {
                  "character": 0,
                  "line": 4,
                },
                {
                  "character": 0,
                  "line": 4,
                },
              ],
              "severity": "Error",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
  {
    "id": "file:///workspace/file.py:info:7:1",
    "name": "MsgC",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/file.py",
            "path": "/workspace/file.py",
            "scheme": "file",
          },
          [
            {
              "code": "E003",
              "message": "MsgC",
              "range": [
                {
                  "character": 0,
                  "line": 6,
                },
                {
                  "character": 0,
                  "line": 6,
                },
              ],
              "severity": "Information",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
  {
    "id": "file:///workspace/file.py:hint:2:1",
    "name": "MsgD",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/file.py",
            "path": "/workspace/file.py",
            "scheme": "file",
          },
          [
            {
              "code": "E004",
              "message": "MsgD",
              "range": [
                {
                  "character": 0,
                  "line": 1,
                },
                {
                  "character": 0,
                  "line": 1,
                },
              ],
              "severity": "Hint",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
  {
    "id": "file:///workspace/sample.py:warning:21:1",
    "name": "Msg2",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/sample.py",
            "path": "/workspace/sample.py",
            "scheme": "file",
          },
          [
            {
              "code": "W001",
              "message": "Msg2",
              "range": [
                {
                  "character": 0,
                  "line": 20,
                },
                {
                  "character": 0,
                  "line": 20,
                },
              ],
              "severity": "Warning",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > files are attached as just references without content 1`] = `
"explain contents of #file:file.ts and other files
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<attachment id="file:file.ts" filePath="/workspace/file.ts" />
<attachment id="sample.py" filePath="/workspace/sample.py" />
</attachments>
<userRequest>
explain contents of #file:file.ts and other files (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > files are attached as just references without content 2`] = `
[
  {
    "displayName": "file:file.ts",
    "path": "/workspace/file.ts",
    "type": "file",
  },
  {
    "displayName": "sample.py",
    "path": "/workspace/sample.py",
    "type": "file",
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > files are attached as just references without content 3`] = `
[
  {
    "id": "file:file.ts",
    "name": "file:file.ts",
    "range": [
      20,
      32,
    ],
    "value": {
      "$mid": 1,
      "path": "/workspace/file.ts",
      "scheme": "file",
    },
  },
  {
    "id": "sample.py",
    "name": "sample.py",
    "range": undefined,
    "value": {
      "$mid": 1,
      "path": "/workspace/sample.py",
      "scheme": "file",
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > groups diagnostics based on same range 1`] = `
"Fix these errors
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<error path="/workspace/file.py" line=2 code="E001" severity="warning">
Msg1
</error>
<error path="/workspace/file.py" line=2 code="E002" severity="error">
MsgB
</error>
<error path="/workspace/file.py" line=7 code="E003" severity="info">
MsgC
</error>
<error path="/workspace/file.py" line=7 code="E004" severity="hint">
MsgD
</error>

</attachments>
<userRequest>
Fix these errors (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > groups diagnostics based on same range 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > groups diagnostics based on same range 3`] = `
[
  {
    "id": "file:///workspace/file.py:warning:2:1",
    "name": "Msg1",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/file.py",
            "path": "/workspace/file.py",
            "scheme": "file",
          },
          [
            {
              "code": "E001",
              "message": "Msg1",
              "range": [
                {
                  "character": 0,
                  "line": 1,
                },
                {
                  "character": 0,
                  "line": 1,
                },
              ],
              "severity": "Warning",
              "source": undefined,
            },
            {
              "code": "E002",
              "message": "MsgB",
              "range": [
                {
                  "character": 0,
                  "line": 1,
                },
                {
                  "character": 0,
                  "line": 1,
                },
              ],
              "severity": "Error",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
  {
    "id": "file:///workspace/file.py:info:7:1",
    "name": "MsgC",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/file.py",
            "path": "/workspace/file.py",
            "scheme": "file",
          },
          [
            {
              "code": "E003",
              "message": "MsgC",
              "range": [
                {
                  "character": 0,
                  "line": 6,
                },
                {
                  "character": 0,
                  "line": 6,
                },
              ],
              "severity": "Information",
              "source": undefined,
            },
            {
              "code": "E004",
              "message": "MsgD",
              "range": [
                {
                  "character": 0,
                  "line": 6,
                },
                {
                  "character": 0,
                  "line": 6,
                },
              ],
              "severity": "Hint",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > includes contents of regular prompt files 1`] = `
"Process these files
 <reminder>
Follow instructions in #prompt:doit.prompt.md
</reminder>
<attachments>
<attachment id="prompt:doit.prompt.md">
// filepath: /doit.prompt.md
This is a prompt file
</attachment>

</attachments>
<userRequest>
Process these files (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > includes contents of regular prompt files 2`] = `
[
  {
    "displayName": "prompt:doit.prompt.md",
    "path": "/doit.prompt.md",
    "type": "file",
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > includes contents of regular prompt files 3`] = `
[
  {
    "id": "vscode.prompt.file__file:///doit.prompt.md",
    "modelDescription": "Prompt instruction file",
    "name": "prompt:doit.prompt.md",
    "value": {
      "$mid": 1,
      "external": "file:///doit.prompt.md",
      "path": "/doit.prompt.md",
      "scheme": "file",
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > includes contents of untitled file 1`] = `
"Process these files
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<attachment id="file:untitled-1">
// filepath: untitled:untitled-1
function example() {
	console.log("This is an example");
}
</attachment>

</attachments>
<userRequest>
Process these files (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > includes contents of untitled file 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > includes contents of untitled file 3`] = `
[
  {
    "id": "untitled:untitled-1",
    "name": "file:untitled-1",
    "range": undefined,
    "value": {
      "$mid": 1,
      "external": "untitled:untitled-1",
      "path": "untitled-1",
      "scheme": "untitled",
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > includes contents of untitled prompt files 1`] = `
"Process these files
 <reminder>
Follow instructions in #prompt:Untitled-2
</reminder>
<attachments>
<attachment id="prompt:Untitled-2">
// filepath: untitled:untitled-1
This is a prompt file
</attachment>
<attachment id="regular.ts" filePath="/workspace/regular.ts" />
</attachments>
<userRequest>
Process these files (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > includes contents of untitled prompt files 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > includes contents of untitled prompt files 3`] = `
[
  {
    "id": "vscode.prompt.file__untitled:untitled-1",
    "modelDescription": "Prompt instruction file",
    "name": "prompt:Untitled-2",
    "value": {
      "$mid": 1,
      "external": "untitled:untitled-1",
      "path": "untitled-1",
      "scheme": "untitled",
    },
  },
  {
    "id": "regular.ts",
    "name": "regular.ts",
    "range": undefined,
    "value": {
      "$mid": 1,
      "path": "/workspace/regular.ts",
      "scheme": "file",
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > just the prompt without anything else 1`] = `"hello world"`;

exports[`CopilotCLI Generate & parse prompts > just the prompt without anything else 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > just the prompt without anything else 3`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > parses locations including files with spaces 1`] = `
"base
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<attachment id="file:file.ts">
Excerpt from file.ts, lines 5 to 5:
\`\`\`plaintext
// filepath: /workspace/file.ts
function sub
\`\`\`
</attachment>
<attachment id="file:sample.ts">
Excerpt from sample.ts, lines 5 to 5:
\`\`\`plaintext
// filepath: /workspace/hello world/sample.ts

\`\`\`
</attachment>
<attachment id="file:sample.py">
Excerpt from sample.py, lines 4 to 4:
\`\`\`plaintext
// filepath: /workspace/sample.py
def subtract
\`\`\`
</attachment>

</attachments>
<userRequest>
base (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > parses locations including files with spaces 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > parses locations including files with spaces 3`] = `
[
  {
    "id": "{"uri":{"$mid":1,"path":"/workspace/file.ts","scheme":"file"},"range":[{"line":4,"character":0},{"line":4,"character":0}]}",
    "name": "file:file.ts",
    "range": undefined,
    "value": {
      "range": [
        {
          "character": 0,
          "line": 4,
        },
        {
          "character": 0,
          "line": 4,
        },
      ],
      "uri": {
        "$mid": 1,
        "path": "/workspace/file.ts",
        "scheme": "file",
      },
    },
  },
  {
    "id": "{"uri":{"$mid":1,"path":"/workspace/hello world/sample.ts","scheme":"file"},"range":[{"line":4,"character":0},{"line":4,"character":0}]}",
    "name": "file:sample.ts",
    "range": undefined,
    "value": {
      "range": [
        {
          "character": 0,
          "line": 4,
        },
        {
          "character": 0,
          "line": 4,
        },
      ],
      "uri": {
        "$mid": 1,
        "path": "/workspace/hello world/sample.ts",
        "scheme": "file",
      },
    },
  },
  {
    "id": "{"uri":{"$mid":1,"path":"/workspace/sample.py","scheme":"file"},"range":[{"line":3,"character":0},{"line":3,"character":0}]}",
    "name": "file:sample.py",
    "range": undefined,
    "value": {
      "range": [
        {
          "character": 0,
          "line": 3,
        },
        {
          "character": 0,
          "line": 3,
        },
      ],
      "uri": {
        "$mid": 1,
        "path": "/workspace/sample.py",
        "scheme": "file",
      },
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > parses single error diagnostic 1`] = `
"Fix this error
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<error path="/workspace/file.py" line=13 code="E001" severity="error">
Unterminated string
</error>

</attachments>
<userRequest>
Fix this error (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > parses single error diagnostic 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > parses single error diagnostic 3`] = `
[
  {
    "id": "file:///workspace/file.py:error:13:1",
    "name": "Unterminated string",
    "range": undefined,
    "value": ChatReferenceDiagnostic {
      "diagnostics": [
        [
          {
            "$mid": 1,
            "external": "file:///workspace/file.py",
            "path": "/workspace/file.py",
            "scheme": "file",
          },
          [
            {
              "code": "E001",
              "message": "Unterminated string",
              "range": [
                {
                  "character": 0,
                  "line": 12,
                },
                {
                  "character": 0,
                  "line": 12,
                },
              ],
              "severity": "Error",
              "source": undefined,
            },
          ],
        ],
      ],
    },
  },
]
`;

exports[`CopilotCLI Generate & parse prompts > returns original prompt unchanged for slash command 1`] = `"/help something"`;

exports[`CopilotCLI Generate & parse prompts > returns original prompt unchanged for slash command 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > returns original prompt unchanged for slash command 3`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > returns overridden prompt instead of using the request prompt 1`] = `"What is 1+2"`;

exports[`CopilotCLI Generate & parse prompts > returns overridden prompt instead of using the request prompt 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > returns overridden prompt instead of using the request prompt 3`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > uses attachment id attribute for name/id 1`] = `
"explain #sym:add
 <reminder>
IMPORTANT: this context may or may not be relevant to your tasks. You should not respond to this context unless it is highly relevant to your task
</reminder>
<attachments>
<attachment id="sym:add">
Excerpt from add.py, lines 2 to 4:
\`\`\`plaintext
// filepath: /workspace/add.py
def add(a, b):
				return a + b
			}
\`\`\`
</attachment>

</attachments>
<userRequest>
explain #sym:add (See <attachments> above for file contents. You may not need to search or read the file again.)
</userRequest>
"
`;

exports[`CopilotCLI Generate & parse prompts > uses attachment id attribute for name/id 2`] = `[]`;

exports[`CopilotCLI Generate & parse prompts > uses attachment id attribute for name/id 3`] = `
[
  {
    "id": "vscode.symbol/{"uri":{"$mid":1,"path":"/workspace/add.py","scheme":"file"},"range":[{"line":1,"character":0},{"line":3,"character":0}]}",
    "name": "sym:add",
    "range": [
      8,
      15,
    ],
    "value": {
      "range": [
        {
          "character": 0,
          "line": 1,
        },
        {
          "character": 0,
          "line": 3,
        },
      ],
      "uri": {
        "$mid": 1,
        "path": "/workspace/add.py",
        "scheme": "file",
      },
    },
  },
]
`;
